--- a/smart-life-main-categories.html
+++ b/smart-life-main-categories.html
@@ -18,7 +18,7 @@
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/smart-life/main-categories.js"></script>
-
+<script>var MENULINK = "#link-smartlife";</script>
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/style.css">
