--- a/offerte3.html
+++ b/offerte3.html
@@ -17,6 +17,7 @@
 <!-- website Javascript -->
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
+    <script src="http://guidoantoniomatteo.altervista.org/tim/js/offerte/offerte3.js"></script>
 
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
@@ -27,32 +28,6 @@
 
 </head>
 
-    <script>
-
-        var id=0;
-        var offerteDispositivi = new XMLHttpRequest();
-        var dispositivi = "http://guidoantoniomatteo.altervista.org/components/offerte/getOfferteDispositivi.php?id=" + id;
-        offerteDispositivi.onreadystatechange = function () {
-        if (offerteDispositivi.readyState == 4 && offerteDispositivi.status == 200)
-            getOfferteDispositivi(offerteDispositivi.responseText);
-        }
-        offerteDispositivi.open("GET", dispositivi, true);
-        offerteDispositivi.send();
-
-        function getOfferteDispositivi(response) {
-            var arr = JSON.parse(response);
-            var i;
-            var out = "";
-            for(i = 0; i < arr.length; i++){
-                out+= '<div class="col-md-3 promotiontile center-block"><a href="http://guidoantoniomatteo.altervista.org/tim/device/singolodevice.html?id='+ arr[i].dispositivo +'"><img class="img-responsive devicesize center-block" src="' + arr[i].path + '" alt="' + arr[i].nome +'"><h2 class="nomargintop">' + arr[i].nome + '</h2><h1 class="nomargintop description-red">' + arr[i].prezzoscontato + '</h1> </a></div>';
-            }
-            document.getElementById(1).innerHTML = out;
-        }
-
-
-
-
-    </script>
 
 <body>
 
