--- a/testimonial.html
+++ b/testimonial.html
@@ -9,49 +9,22 @@
 <title>Page Title</title>
 
 <!-- Bootstrap: Latest compiled and minified CSS -->
-<link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet"	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <!-- jQuery library -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <!-- Bootstrap library -->
-<script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+<script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- website Javascript -->
-<script src="js/menu.js"></script>
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/chi-siamo/testimonial.js"></script>
 
 <!-- website CSS -->
-<link rel="stylesheet" type="text/css" href="css/menu.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/standardimport.css">
-<link rel="stylesheet" type="text/css" href="css/innovazione.css">
-<link rel="stylesheet" type="text/css" href="css/guido.css">
-
-
-     <script>
-            var xmlhttp = new XMLHttpRequest();
-            var url = "http://guidoantoniomatteo.altervista.org/components/testimonial/getTestimonial.php";
-
-            xmlhttp.onreadystatechange=function() 
-            {
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200)
-                    myFunction(xmlhttp.responseText);
-            }
-            xmlhttp.open("GET", url, true);
-            xmlhttp.send();
-
-            function myFunction(response) {
-                var arr = JSON.parse(response);
-                var i;
-                var out="";
-
-                for(i = 0; i < arr.length; i++) {
-                    out += "<div class=\"row\"><div class=\"col-md-12\">"+ "<div style=\"z-index: 2;\"><img class=\"img-responsive\"src=\" " + arr[i].foto + "\" alt=\" "+ arr[i].nome +"tim\"></div><div class=\"inner-presentation\"><div style=\"z-index: 5;\"><h1><br/>" + arr[i].nome + "</h1></div><div style=\"z-index: 5;\"><h2>" + arr[i].frase1 + "</h2><h2>" + arr[i].frase2 + "</h2></div></div><div style=\"z-index: 5; background-color: #004890;\">" + "<a href=\" " +arr[i].linkspot +"\" class=\"btn btn-primary\">guarda lo spot</a>"+"</div></div></div>";
-                }
-                document.getElementById("id01").innerHTML = out;
-            }
-        </script>
+<link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
+<link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/style.css">
+<link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/standardimport.css">
+<link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/innovazione.css">
+<link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/guido.css">
 
 </head>
 
@@ -59,77 +32,12 @@
 
 	<div id="page" class="container">
 
-		<div id="top-large" class="row hidden-xs">
+		<div id="header"></div>
 
-			<div id="logo-large" class="col-lg-2">
-				<img src="img/logo.png" />
-			</div>
-
-			<div class="col-lg-10" >
+		<div id="content" class="row">
+			<div class="col-xs-12">
 				<div class="row">
-
-					<div class="col-lg-7 left">
-						<div class="row">
-							<a class="col-lg-2 highlight" href="piani">Piani</a>
-							<a class="col-lg-2" href="offerte">Offerte</a>
-							<a class="col-lg-3" href="smart-life">Smart Life</a>
-							<a class="col-lg-2" href="dispositi">Dispositivi</a>
-							<a class="col-lg-3" href="assistenza">Assistenza</a>
-						</div>
-					</div>
-
-					<div class="col-lg-1 hidden-md hidden-sm hidden-xs wave">
-						<img src="img/ondina.png" />
-					</div>
-
-					<div class="col-lg-3 right">
-						<div class="row">
-							<a class="col-lg-6" href="chi-siamo">Chi Siamo</a>
-							<a class="col-lg-6" href="gruppo">Gruppo</a>
-						</div>
-					</div>
-
-					<div class="col-lg-1 hidden-md hidden-sm hidden-xs right-border">
-						<img src="img/menu-right.png" />
-					</div>
-
-				</div>
-			</div>
-
-		</div>
-
-		<div id="top-small" class="row hidden-sm hidden-md hidden-lg">
-
-			<div id="logo-small" class="col-xs-4">
-				<img src="img/logo.png" />
-			</div>
-
-			<div id="top-menu-button-small" class="col-xs-2 col-xs-offset-5">
-				<img src="img/menu-mobile-closed.png" class="menu-closed"/>
-				<img src="img/menu-mobile-open.png" class="menu-open"/>
-			</div>
-
-			<div id="top-menu-small">
-				<div class="first-menu">
-					<div>
-						<a href="piani">PIANI</a>
-						<a href="offerte">OFFERTE</a>
-						<a href="smart-life">SMART LIFE</a>
-						<a href="dispositi">DISPOSITIVI</a>
-						<a href="assistenza">ASSISTENZA</a>
-					</div>
-				</div>
-				<div class="second-menu">
-					<div>
-						<a href="chi-siamo">CHI SIAMO</a>
-						<a href="gruppo">GRUPPO</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
-        <div id="content" class="row">
-            <div class="col-md-12">
+                <div class="col-md-12">
                 <div class="row grey-menu">
 
                         <div class="col-md-4 "><a href="innovazione.html">INNOVAZIONE</a></div>
@@ -137,7 +45,7 @@
                         <div class="col-md-4 "><a href="progetti.html">PROGETTI</a></div>
 
                 </div>
-            </div>
+                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <img class="immaginepresentazione" src="img/testimonial/testimonial.png" alt="testimonial tim" />
@@ -156,43 +64,17 @@
                 <div class="col-md-12" id="id01"></div>
                 </div>
 
-                
-            </div>
+                </div>
 
 
-		<div id="footer" class="row middle-align"><!--
 
-			--><div id="footer-logo" class="col-sm-2 hidden-xs" >
-				<img src="img/footer_logo.png" />
-			</div><!--
-			--><div id="footer-logo" class="col-xs-2 hidden-sm hidden-md hidden-lg" >
-				<img src="img/footer_logo_small.png" />
-			</div><!--
-
-			--><div class="col-sm-2 col-sm-offset-1 col-xs-4 menu">
-				<a href="">Contattaci</a>
-				<a href="">Privacy</a>
-				<a href="">Lavora con noi</a>
-				<a href="">Tutela dei minori</a>
-				<a href="">Assistenza legale</a>
-			</div><!--
-
-            --><div class="col-sm-2 col-sm-offset-1 col-xs-4 menu">
-				<a href="">Chi siamo</a>
-				<a href="">Il gruppo</a>
-			</div><!--
-
-            --><div id="footer-social" class="col-sm-3 col-sm-offset-1 col-xs-2">
-				<img src="img/footer_social_1.png" />
-				<img src="img/footer_social_2.png" />
-				<p class="hidden-xs">
-					<br/>Seguici sui principali<br/>Social Network
-				</p>
 			</div>
+
 		</div>
+
+		<div id="footer"></div>
 
 	</div>
 
 </body>
-
 </html>
