--- a/asmaincategory.html
+++ b/asmaincategory.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap library -->
     <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+        <script>
+            var MENULINK = "#link-assistenza";
+        </script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/standardimport.js"></script>
@@ -42,14 +45,14 @@
             <div class="col-sm-4" style="padding-top: 50px;">
                 <div class="row blu-menu">
                     <div class="col-md-12">
-                        <a href="http://guidoantoniomatteo.altervista.org/tim/as/assubcategory.html?id=0">
+                        <a href="assubcategory.html?id=0">
                             In Evidenza
                         </a>
                     </div>
                 </div>
                 <div class="row grey-menu">
                    <div class="col-md-12" style="height: inherit !important;">
-                       <a href="http://guidoantoniomatteo.altervista.org/tim/as/assubcategory.html?id=0">
+                       <a href="assubcategory.html?id=0">
                         <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/assistenza-tecnica1.png" alt="assistenza tecnica" width="100%"/>
                        </a>
                         <p class="center">Qui trovi le risposte alle domande più frequenti</p>
