--- a/buyplans.html
+++ b/buyplans.html
@@ -15,6 +15,9 @@
     <!-- Bootstrap library -->
     <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+    <script>
+        var MENULINK = "#link-piani";
+    </script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/piani/buyplans.js"></script>
