--- a/piano.html
+++ b/piano.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap library -->
     <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+    <script>var MENULINK = "#link-piani";</script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/piani/piano.js"></script>
@@ -36,14 +37,16 @@
 
 		<div id="content" class="row">
 			<div class="col-xs-12">
-                <div class="row blu-menu" id="barrablu"></div>
+                <div class="col-md-12">
+                    <div class="row blu-menu" id="barrablu"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" id="presentationphoto"></div>
+                </div>
+                <div id="information-plans"></div>
+                <div id="descrizione"></div>
+                <div class="col-md-12" id="asrelative"></div>
             </div>
-            <div class="row">
-                <div class="col-md-12" id="presentationphoto"></div>
-            </div>
-            <div id="information-plans"></div>
-            <div id="descrizione"></div>
-            <div class="col-md-12" id="asrelative"></div>
         </div>
 
         <div id="footer"></div>
