--- a/assingola.html
+++ b/assingola.html
@@ -14,9 +14,12 @@
     <!-- Bootstrap library -->
     <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+    <script>
+        var MENULINK = "#link-assistenza";
+    </script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
-        <script src="http://guidoantoniomatteo.altervista.org/tim/js/as/assingola.js"></script>
+    <script src="http://guidoantoniomatteo.altervista.org/tim/js/as/assingola.js"></script>
         
     <!-- website CSS -->
         <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim//css/menu.css">
