--- a/deviceas.html
+++ b/deviceas.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap library -->
     <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+    <script>var MENULINK = "#link-dispositivi";</script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/as/deviceas.js"></script>
