--- a/offerte1.html
+++ b/offerte1.html
@@ -38,8 +38,8 @@
 			<div class="col-xs-12">
 
 
-				<div class="row marginforrow">
-                    <div class="col-md-12 ">
+				<div class="row">
+                    <div class="col-md-12 nopadding">
 
                         <img class=" img-responsive" src="http://guidoantoniomatteo.altervista.org/tim/img/offerte/piani/presentazione.jpg" style="width:100%;" alt="offerte piani tim">
                         <div class="row">
