--- a/offerte3.html
+++ b/offerte3.html
@@ -39,8 +39,8 @@
             <div class="col-xs-12">
 
 
-                <div class="row marginforrow">
-                    <div class="col-md-12 ">
+                <div class="row ">
+                    <div class="col-md-12 nopadding">
 
                         <img class=" img-responsive" src="http://guidoantoniomatteo.altervista.org/tim/img/offerte/dispositivi/presentazione.jpg" alt="offerte dispositivi tim">
                         <div class="row">
