--- a/testimonial.html
+++ b/testimonial.html
@@ -15,6 +15,7 @@
 <!-- Bootstrap library -->
 <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- website Javascript -->
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/small-menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/chi-siamo/testimonial.js"></script>
@@ -39,11 +40,14 @@
 				<div class="row">
                 <div class="col-md-12">
                 <div class="row grey-menu">
-
-                        <div class="col-md-4 "><a href="innovazione.html">INNOVAZIONE</a></div>
-                        <div class="col-md-4 current-link"><a href="testimonial.html">TESTIMONIAL</a></div>
-                        <div class="col-md-4 "><a href="progetti.html">PROGETTI</a></div>
-
+                    <div class="menu-header hidden-sm hidden-md hidden-lg" style="display: block;">
+                        <div class="col-xs-3"> </div>
+                        <div class="col-xs-6"><a href="">CHI SIAMO</a></div>
+                        <div class="col-xs-3"><img src="http://guidoantoniomatteo.altervista.org/tim/img/menu-mobile-closed-blu.png" class="menu-closed"><img src="http://guidoantoniomatteo.altervista.org/tim/img/menu-mobile-open-blu.png" class="menu-open" style="display: inline;"></div>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 menu-link" style="display: block;"><a href="innovazione.html">INNOVAZIONE</a></div>
+                    <div class="col-sm-4 col-xs-12 menu-link current-link" style="display: block;"><a href="testimonial.html">TESTIMONIAL</a></div>
+                    <div class="col-sm-4 col-xs-12 menu-link" style="display: block;"><a href="progetti.html">PROGETTI</a></div>
                 </div>
                 </div>
                 <div class="row">
