--- a/assubcategory.html
+++ b/assubcategory.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim//css/style.css">
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim//css/standardimport.css">
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim//css/antonio.css">
+    <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim//css/guido.css">
                 
     </head>
 
@@ -38,9 +39,10 @@
                 <div class="row blu-menu" id="categorie"></div>
                 <div class="row">
                     <div class="col-md-12 nopadding">
-                        <div style="position: absolute; top: 100px; left: 20px; z-index: 10; width:250px;" id="titolocategoria"></div>
-                    <div style="position: relative; top: 0px; left: 0px; z-index: 1;">
                         <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/sottocategorie.jpg" alt="Assistenza Tecnica" class="immaginepresentazione">
+                        <div class="row inner-presentation">
+                            <div class="col-md-10" id="titolocategoria"></div>
+                        </div>
                     </div>
                     </div>
                 </div>
