--- a/singolodevice.html
+++ b/singolodevice.html
@@ -82,7 +82,7 @@
                                 <div id="prezzo"></div>
                             </div>
                             <div class="col-sm-3 hidden-xs"></div>
-                            <div class="col-md-4 buttons blue" id ="deviceplans" style="border: 0px;"></div> 
+                            <div class="col-md-4 col-xs-12 buttons blue" id ="deviceplans" style="border: 0px;"></div> 
                         </div>
                     </div>
                     <div class="col-sm-12" id="correlati"></div>
