--- a/recensionedevice.html
+++ b/recensionedevice.html
@@ -35,10 +35,6 @@
     }
 </style>
     
-<script type="application/javascript">
-
-      
-    </script>
 
 </head>
 
@@ -71,7 +67,7 @@
                             <div class="col-md-12">
                                 <h1 class="titolorosso left">Scrivi una recensione</h1>
                             </div>
-                            <form id="review-form">
+                            <form id="review-form" action="javascript:writeform();">
                                 <div class="col-sm-6">
                                     <label>Nome e cognome</label><br/>
                                     <input type="text" id="nome" />
@@ -90,7 +86,7 @@
                                 </div>
                                 <div class="col-sm-4"></div>
                                 <div class="col-sm-4">
-                                    <input type="submit" />
+                                    <input type="submit" value="submit" id="submit" />
                                 </div>
                                 <div class="col-sm-4"></div>
                             </form>
