--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>Page Title</title>
+    <title>TIM</title>
 
     <!-- Bootstrap: Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -15,6 +15,7 @@
     <!-- Bootstrap library -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- website Javascript -->
+    <script>var MENULINK = "";</script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/home/home.js"></script>
@@ -103,6 +104,9 @@
                 <div class="row">
                     <div class="col-md-2 resize no-padding-right-left ">
                         <img class="img-responsive img100 promotion-image" src="http://guidoantoniomatteo.altervista.org/tim/img/home/homesconto.png" alt="italia tim">
+                    </div>
+                    <div class="col-md-2 resizeinverse no-padding-right-left ">
+                        <h1 class="description-blu"> Piani in offerta</h1>
                     </div>
                     <div class="col-md-10 text-center background-blu promotion-image promotion-row">
                         <div class="row" id="piani">
