--- a/offerte2.html
+++ b/offerte2.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<title>Page Title</title>
+<title>Offerte Smart Life</title>
 
 <!-- Bootstrap: Latest compiled and minified CSS -->
 <link rel="stylesheet"	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -17,8 +17,8 @@
 <!-- website Javascript -->
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
-    <script src="http://guidoantoniomatteo.altervista.org/tim/js/offerte/offerte2.js"></script>
-
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/offerte/offerte2.js"></script>
+<script>var MENULINK = "#link-offerte";</script>
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/style.css">
