--- a/testimonial.html
+++ b/testimonial.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<title>Page Title</title>
+<title>Testimonial TIM</title>
 
 <!-- Bootstrap: Latest compiled and minified CSS -->
 <link rel="stylesheet"	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -15,10 +15,12 @@
 <!-- Bootstrap library -->
 <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- website Javascript -->
+<script>var MENULINK = "#link-chisiamo";</script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/small-menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/chi-siamo/testimonial.js"></script>
+
 
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
