--- a/asmaincategory.html
+++ b/asmaincategory.html
@@ -37,33 +37,35 @@
         <div id="content">
             <div><h1 class="titolorosso">Assistenza Tecnica</h1></div>
             <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-6">
-                <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/assistenza.jpg" alt="assistenza tecnica" class="img-responsive" />
-            </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-4" style="padding-top: 50px;">
-                <div class="row blu-menu">
-                    <div class="col-md-12">
-                        <a href="assubcategory.html?id=0">
-                            In Evidenza
-                        </a>
-                    </div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-6">
+                    <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/assistenza.jpg" alt="assistenza tecnica" class="img-responsive" />
                 </div>
-                <div class="row grey-menu">
-                   <div class="col-md-12" style="height: inherit !important;">
-                       <a href="assubcategory.html?id=0">
-                        <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/assistenza-tecnica1.png" alt="assistenza tecnica" width="100%"/>
-                       </a>
-                        <p class="center">Qui trovi le risposte alle domande più frequenti</p>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4" style="padding-top: 50px;">
+                    <div class="row blu-menu">
+                        <div class="col-md-12">
+                            <a href="assubcategory.html?id=0">
+                                In Evidenza
+                            </a>
+                        </div>
                     </div>
+                    <div class="row grey-menu">
+                       <div class="col-md-12" style="height: inherit !important;">
+                           <a href="assubcategory.html?id=0">
+                            <img src="http://guidoantoniomatteo.altervista.org/tim/img/as/assistenza-tecnica1.png" alt="assistenza tecnica" width="100%"/>
+                           </a>
+                            <p class="center">Qui trovi le risposte alle domande più frequenti</p>
+                        </div>
+                    </div>
+
                 </div>
-                
             </div>
-            </div>
-             <div class="col-xs-12 nopadding">
-                <div class="row blu-menu" id="categorie_blu" ></div>
-                <div class="row grey-menu" id="categorie_grey" ></div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row blu-menu" id="categorie_blu" ></div>
+                    <div class="row grey-menu" id="categorie_grey" ></div>
+                </div>
             </div>
 
         </div>
