--- a/piano.html
+++ b/piano.html
@@ -45,6 +45,7 @@
                 </div>
                 <div id="information-plans"></div>
                 <div id="descrizione"></div>
+                <div class="row" id="slrelativi"></div>
                 <div class="col-md-12" id="asrelative"></div>
             </div>
         </div>
