--- a/singolodevice.html
+++ b/singolodevice.html
@@ -86,6 +86,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12" id="correlati"></div>
+                    <div class="col-sm-12" id="slrelativi"></div>
                     <div class="col-sm-12" id="promozioni"></div>
                 </div>
 			</div>
